# Brokus

./: .gitignore  README.md  install.sh  pyproject.toml  requirements.txt
brokus/: __init__.py  __main__.py
brokus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
brokus/ai/: client.py  model_discovery.py  models.py  prompts.py  schemas.py
brokus/core/: context.py  dna_extractor.py  extractor.py  pipeline.py  tracker.py  validator.py
brokus/core/cloud/: __init__.py  base.py  gdrive.py  manager.py  nextcloud.py  oauth.py  rclone.py
brokus/storage/: database.py  exporter.py
brokus/tui/: app.py  app_pt.py  app_simple.py  pt_screens.py  pt_state.py
brokus/tui/screens/: editor.py  export.py  generation.py  library.py  new_book.py  settings.py  welcome.py
brokus/tui/widgets/: progress.py  (+2 more)
brokus/utils/: crypto.py  i18n.py  logger.py  opener.py  settings_loader.py  tokens.py  updater.py
config/: genres.yaml  prompts.yaml  settings.yaml
data/: projects.db
data/books/: die_kinder_auf_der_insel.docx  die_kinder_auf_der_insel.epub  die_kinder_auf_der_insel.json  die_kinder_auf_der_insel.md  die_kinder_auf_der_insel.txt  wir_auf_der_insel.docx  wir_auf_der_insel.epub  wir_auf_der_insel.json  wir_auf_der_insel.md  wir_auf_der_insel.txt  wir_kids.docx  wir_kids.epub  wir_kids.json  wir_kids.md  wir_kids.txt
data/i18n/: de.json  en.json  es.json  fr.json  it.json  nl.json
data/i18n_backup/: de.json  en.json  es.json  fr.json  it.json  nl.json
scripts/: add_yaml_labels.py  check_git_safety.py  check_i18n.py  test_mammouth_api.py
