[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "brokus"
version = "1.0.0"
description = "KI-gestützter Buch-Generator – erstelle komplette Romane im Terminal"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "textual>=0.52.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "ollama>=0.1.0",
    "ebooklib>=0.18",
    "weasyprint>=60.0",
    "markdown>=3.5.0",
    "tiktoken>=0.5.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
    "groq>=0.8.0",
    "google-generativeai>=0.8.0",
    "cohere>=5.0.0",
    "mistralai>=0.4.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
brokus = "brokus.__main__:main"

[project.urls]
Homepage = "https://github.com/user/brokus"
Repository = "https://github.com/user/brokus"

[tool.setuptools.packages.find]
where = ["."]
